c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/void_array_nested_in_declaration.c
extern void (*ptr)[3][4];  // array of incomplete element type is illegal (including nested array)

void *foo(void) {
    return ptr;
}